# godbillebenoit

./: .gitignore  .swp  CMakeLists.txt  Diagramme1.dia.autosave  Makefile  Rapport.odt  ToDo  ToDo2  commande-http.odt  r.txt  terrain_brouillon  test-pdf.odt
dia2code/dia2code-0.8.7/: Makefile  config.status
dia2code/dia2code-0.8.7/dia2code/: Makefile  dia2code
dia2code/dia2code-0.8.7/dia2code/docs/: Makefile
dia2code/dia2code-0.8.7/dia2code/docs/en/: Makefile
dia2code/src/: generate_code_cpp.c
rapport/: .~lock.Rapport.odt#  Rapport.odt
src/: .h  AElementAlloc.h  AI.dia  AI.h  Archer.h  Canon.h  CaseTerrain.h  Cavalier.h  Couche.h  ElementAlloc.h  Etat.h  Fantassin.h  GrilleElement.h  Lancier.h  Personnage.h  Roi.h  Scene.h  Tuile.h  TuileAnimee.h  TuileStatique.h  engine.dia  engine.dia.autosave  engine.h  etatfinal.dia  etatfinal.dia.autosave  main.cpp  render.dia  render.dia.autosave  render.h  server.dia  state.dia  state.dia.autosave  state.h  state.hpp
src/AI/: IA.cpp  IA.h  Niveau.h
src/engine/: Action.cpp  Action.h  Attaquer.cpp  Attaquer.h  CategorieCommande.h  ChangerInit.cpp  ChangerInit.h  ChangerMode.cpp  ChangerMode.h  ChangerTour.cpp  ChangerTour.h  Commande.cpp  Commande.h  CommandeClic.cpp  CommandeClic.h  CommandeEchap.cpp  CommandeEchap.h  CommandeFleche.cpp  CommandeFleche.h  CommandeZoomCamera.cpp  CommandeZoomCamera.h  Deplacement.cpp  Deplacement.h  DeplacementCamera.cpp  DeplacementCamera.h  Direction.h  Déplacement.h  DéplacementCaméra.h  Historique.cpp  Historique.h  ListeActions.cpp  ListeActions.h  ListeCommande.cpp  ListeCommande.h  Mode.h  Moteur.cpp  Moteur.h  PlacementTroupe.cpp  PlacementTroupe.h  Regulateur.cpp  (+5 more)
src/render/: Bouton.cpp  Bouton.h  Couche.cpp  Couche.h  Message.cpp  Message.h  Panneau.cpp  Panneau.h  Scene.cpp  Scene.h  Tuile.cpp  Tuile.h  TuileAnimee.cpp  TuileAnimee.h  TuileStatique.cpp  TuileStatique.h  TypeBouton.h  render.dia  render.dia.autosave
src/server/: AbstractService.cpp  AbstractService.h  AbstractService.hpp  CMakeLists.txt  Commande.h  CommandeDB.cpp  CommandeDB.h  CommandeService.cpp  CommandeService.h  ServiceException.cpp  ServiceException.h  ServicesManager.cpp  ServicesManager.h  User.cpp  User.h  UserDB.cpp  UserDB.h  UserService.cpp  UserService.h  VersionService.cpp  VersionService.h  configure  main.cpp  run  test.sh
src/server/solution/: main.cpp
src/server/src/: ServicesManager.cpp  User.h  UserService.cpp  VersionService.cpp
src/state/: Acces.h  CaseTerrain.cpp  CaseTerrain.h  CreationElement.cpp  CreationElement.h  Element.cpp  Element.h  ElementFactory.h  Etat.cpp  Etat.h  EvenementEtat.cpp  EvenementEtat.h  GrilleElement.cpp  GrilleElement.h  IObservateurEtat.h  ListeElement.cpp  ListeElement.h  Observable (copie).h  Observable.cpp  Observable.h  Observateur.cpp  Observateur.h  Personnage.cpp  Personnage.h  TypeEvenementEtat.h  TypePersonnage.h  define.h  etatfinal.dia  etatfinal.dia.autosave
